dedicated shared delayed executor